--- a/src/app/components/inicio/inicio.component.html
+++ b/src/app/components/inicio/inicio.component.html
@@ -5,26 +5,31 @@
     <div class="bg-box">
       <img
         src="https://img.freepik.com/foto-gratis/arreglo-dia-educacion-mesa-espacio-copia_23-2148721266.jpg?w=1380&t=st=1659288020~exp=1659288620~hmac=02dd9f919a82eee68ec547e8bab2735d92e59bf880967636f2cf57f37c6ffbbb"
-        alt="">
+        alt=""
+      />
     </div>
     <!-- header section strats -->
     <header class="header_section">
       <div class="container">
-        <nav class="navbar navbar-expand-lg custom_nav-container ">
+        <nav class="navbar navbar-expand-lg custom_nav-container">
           <a class="navbar-brand" href="inicio">
-            <span>
-              Becas
-            </span>
+            <span> Becas </span>
           </a>
 
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-toggle="collapse"
+            data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
             <span class=""> </span>
           </button>
 
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav  mx-auto ">
-
+            <ul class="navbar-nav mx-auto">
               <li class="nav-item">
                 <a class="nav-link" href="inicio">Menú</a>
               </li>
@@ -43,91 +48,76 @@
     </header>
     <!-- end header section -->
     <!-- slider section -->
-    <section class="slider_section ">
+    <section class="slider_section">
       <div id="customCarousel1" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <div class="container ">
+            <div class="container">
               <div class="row">
-                <div class="col-md-7 col-lg-6 ">
+                <div class="col-md-7 col-lg-6">
                   <div class="detail-box">
-                    <h1>
-                      Consulta becas y consigue becas para estudiar
-                    </h1>
+                    <h1>Consulta becas y consigue becas para estudiar</h1>
                     <p>
-                      ¿Estás buscando una beca de estudios? La forma de organizar tu búsqueda es comenzar por las becas
-                      según tu rama de estudios. Consulta las becas por ramas de estudios en nuestra web y encuentra la
-                      becas para estudiar que necesitas.
+                      ¿Estás buscando una beca de estudios? La forma de
+                      organizar tu búsqueda es comenzar por las becas según tu
+                      rama de estudios. Consulta las becas por ramas de estudios
+                      en nuestra web y encuentra la becas para estudiar que
+                      necesitas.
                     </p>
                     <div (click)="toLogin()" class="btn-box">
-                      <a class="btn1">
-                        Empezar
-                      </a>
+                      <a class="btn1"> Empezar </a>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-
-
         </div>
       </div>
-
     </section>
     <!-- end slider section -->
   </div>
 
   <!-- offer section -->
 
-  <section class="offer_section layout_padding-bottom">
+  <!--   <section class="offer_section layout_padding-bottom">
     <div class="offer_container">
-      <div class="container ">
+      <div class="container">
         <div class="row">
-          <div class="col-md-6  ">
-            <div class="box ">
+          <div class="col-md-6">
+            <div class="box">
               <div class="img-box">
                 <img
                   src="https://img.freepik.com/foto-gratis/vista-frontal-nina-tenencia-computadora-portatil_23-2148499006.jpg?w=740&t=st=1659288509~exp=1659289109~hmac=4ce65450c0d9a0b482ac3d36f3ee9922d198e349c1a9aa96f728fdefc05c805d"
-                  alt="">
+                  alt=""
+                />
               </div>
               <div class="detail-box">
-                <h5>
-                  Universidad Rafael Landivar
-                </h5>
-                <h6>
-                  <span>100%</span> de beca
-                </h6>
-                <a href="">
-                  ver más información
-                </a>
+                <h5>Universidad Rafael Landivar</h5>
+                <h6><span>100%</span> de beca</h6>
+                <a href=""> ver más información </a>
               </div>
             </div>
           </div>
-          <div class="col-md-6  ">
-            <div class="box ">
+          <div class="col-md-6">
+            <div class="box">
               <div class="img-box">
                 <img
                   src="https://img.freepik.com/foto-gratis/plano-medio-estudiantes-graduados-felices_23-2148499037.jpg?t=st=1659288509~exp=1659289109~hmac=8f4a09723f29f10e401220c4ce4524fde13e89c3b826cbb9ab0f527b0017cc8f"
-                  alt="">
+                  alt=""
+                />
               </div>
               <div class="detail-box">
-                <h5>
-                  Universidad Galileo
-                </h5>
-                <h6>
-                  <span>80%</span> de beca
-                </h6>
-                <a href="">
-                  ver más información
-                </a>
+                <h5>Universidad Galileo</h5>
+                <h6><span>80%</span> de beca</h6>
+                <a href=""> ver más información </a>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- end offer section -->
 
@@ -136,125 +126,51 @@
   <section class="food_section layout_padding-bottom">
     <div class="container">
       <div class="heading_container heading_center">
-        <h2>
-          Becas
-        </h2>
+        <h2>Becas</h2>
       </div>
 
       <ul class="filters_menu">
         <li class="active" data-filter="*"></li>
       </ul>
 
-
-      <input placeholder="Busca tu beca" type="text" class="inputt" required="">
-
       <div class="filters-content">
         <div class="row grid">
-          <div class="col-sm-6 col-lg-4 all pizza">
+          <div
+            class="col-sm-6 col-lg-4 all pizza"
+            *ngFor="
+              let becas of getModelo
+                | paginate: { itemsPerPage:3, currentPage: page }
+            "
+          >
             <div class="box">
               <div>
                 <div class="img-box">
                   <img
                     src="https://cdn-icons-png.flaticon.com/512/579/579768.png?w=740&t=st=1659290312~exp=1659290912~hmac=6608fe632b4ca1b7edcbd1eab31afa58edd7aa78b4ab6a3ead9b25ad1bf9593b"
-                    alt="">
+                    alt=""
+                  />
                 </div>
                 <div class="detail-box">
-                  <h5>
-                    Beca Uno
-                  </h5>
+                  <h5>{{ becas.nombre }}</h5>
                   <p>
-                    Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus
-                    sed eaque
+                    {{ becas.descripcion }}
                   </p>
                   <div class="options">
-                    <h6>
-                      vacantes 3
-                    </h6>
-                    <a href="">
-                      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                        class="bi bi-eye-fill" viewBox="0 0 16 16">
-                        <path d="M10.5 8a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0z" />
-                        <path
-                          d="M0 8s3-5.5 8-5.5S16 8 16 8s-3 5.5-8 5.5S0 8 0 8zm8 3.5a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7z" />
-                      </svg>
-                    </a>
+                    <h6>{{ becas.vacantes }} vacantes</h6>
+
                   </div>
                 </div>
               </div>
             </div>
           </div>
-          <div class="col-sm-6 col-lg-4 all burger">
-            <div class="box">
-              <div>
-                <div class="img-box">
-                  <img
-                    src="https://cdn-icons-png.flaticon.com/512/579/579768.png?w=740&t=st=1659290312~exp=1659290912~hmac=6608fe632b4ca1b7edcbd1eab31afa58edd7aa78b4ab6a3ead9b25ad1bf9593b"
-                    alt="">
-                </div>
-                <div class="detail-box">
-                  <h5>
-                    Beca Dos
-                  </h5>
-                  <p>
-                    Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus
-                    sed eaque
-                  </p>
-                  <div class="options">
-                    <h6>
-                      vacantes 10
-                    </h6>
-                    <a href="">
-                      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                        class="bi bi-eye-fill" viewBox="0 0 16 16">
-                        <path d="M10.5 8a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0z" />
-                        <path
-                          d="M0 8s3-5.5 8-5.5S16 8 16 8s-3 5.5-8 5.5S0 8 0 8zm8 3.5a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7z" />
-                      </svg>
-                    </a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-6 col-lg-4 all pizza">
-            <div class="box">
-              <div>
-                <div class="img-box">
-                  <img
-                    src="https://cdn-icons-png.flaticon.com/512/579/579768.png?w=740&t=st=1659290312~exp=1659290912~hmac=6608fe632b4ca1b7edcbd1eab31afa58edd7aa78b4ab6a3ead9b25ad1bf9593b"
-                    alt="">
-                </div>
-                <div class="detail-box">
-                  <h5>
-                    Beca Tres
-                  </h5>
-                  <p>
-                    Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus
-                    sed eaque
-                  </p>
-                  <div class="options">
-                    <h6>
-                      vacantes 5
-                    </h6>
-                    <a href="">
-                      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                        class="bi bi-eye-fill" viewBox="0 0 16 16">
-                        <path d="M10.5 8a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0z" />
-                        <path
-                          d="M0 8s3-5.5 8-5.5S16 8 16 8s-3 5.5-8 5.5S0 8 0 8zm8 3.5a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7z" />
-                      </svg>
-                    </a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
+          <br/>
+          <pagination-controls
+          responsive="true"
+          (pageChange)="page = $event"
+          previousLabel=""
+          nextLabel=""
+        ></pagination-controls>
         </div>
-      </div>
-      <div class="btn-box">
-        <a (click)="toLogin()">
-          Ver más
-        </a>
       </div>
     </div>
   </section>
@@ -263,30 +179,25 @@
   <!-- about section -->
 
   <section class="about_section layout_padding">
-    <div class="container  ">
-
+    <div class="container">
       <div class="row">
-        <div class="col-md-6 ">
+        <div class="col-md-6">
           <div class="img-box">
             <img
               src="https://cdn-icons-png.flaticon.com/512/201/201614.png?w=740&t=st=1659290753~exp=1659291353~hmac=5f6ee29acbbcf3f938d32e7d3d5d6aeba982a6eae9f768a2f83d008ed6275e85"
-              alt="">
+              alt=""
+            />
           </div>
         </div>
         <div class="col-md-6">
           <div class="detail-box">
             <div class="heading_container">
-              <h2>
-                Sobre Nosotros
-              </h2>
+              <h2>Sobre Nosotros</h2>
             </div>
             <p>
-              Somos el portal con la mejor información sobre todas las carreras que ofrecen las universidades privadas y
-              públicas de Guatemala.
+              Somos el portal con la mejor información sobre todas las carreras
+              que ofrecen las universidades privadas y públicas de Guatemala.
             </p>
-            <a href="">
-              Leer Más
-            </a>
           </div>
         </div>
       </div>
@@ -301,61 +212,42 @@
       <div class="row">
         <div class="col-md-4 footer-col">
           <div class="footer_contact">
-            <h4>
-              Contáctanos
-            </h4>
+            <h4>Contáctanos</h4>
             <div class="contact_link_box">
               <a href="">
                 <i class="fa fa-map-marker" aria-hidden="true"></i>
-                <span>
-                  Ubicación
-                </span>
+                <span> Ubicación </span>
               </a>
               <a href="">
                 <i class="fa fa-phone" aria-hidden="true"></i>
-                <span>
-                  Llámanos +502 11223344
-                </span>
+                <span> Llámanos +502 11223344 </span>
               </a>
               <a href="">
                 <i class="fa fa-envelope" aria-hidden="true"></i>
-                <span>
-                  becas@gmail.com
-                </span>
+                <span> becas@gmail.com </span>
               </a>
             </div>
           </div>
         </div>
         <div class="col-md-4 footer-col">
           <div class="footer_detail">
-            <a href="" class="footer-logo">
-              Becas
-            </a>
-            <p>
-
-            </p>
+            <a href="" class="footer-logo"> Becas </a>
+            <p></p>
           </div>
         </div>
         <div class="col-md-4 footer-col">
-          <h4>
-            Atención al cliente
-          </h4>
-          <p>
-            Todos los días
-          </p>
-          <p>
-            10.00 Am -10.00 Pm
-          </p>
+          <h4>Atención al cliente</h4>
+          <p>Todos los días</p>
+          <p>10.00 Am -10.00 Pm</p>
         </div>
       </div>
       <div class="footer-info">
         <p>
-          &copy; <span id="displayYear"></span> Todos los derechos reservados por Becas.com
-          <a href="https://html.design/"></a><br><br>
+          &copy; <span id="displayYear"></span> Todos los derechos reservados
+          por Becas.com <a href="https://html.design/"></a><br /><br />
         </p>
       </div>
     </div>
   </footer>
   <!-- footer section -->
-
 </body>
